--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,28 +1,47 @@
+absl-py==0.10.0
 aniso8601==8.0.0
 arrow==0.16.0
+backcall==0.2.0
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
+decorator==4.4.2
 Flask==1.1.2
 Flask-Cors==3.0.9
 Flask-RESTful==0.3.8
 geojson==2.5.0
 googlemaps==4.4.2
 idna==2.10
+ipython==7.18.1
+ipython-genutils==0.2.0
 itsdangerous==1.1.0
+jax==0.1.75
+jaxlib==0.1.52
+jedi==0.17.2
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-numpy==1.18.5
-pyowm==2.10.0
+numpy==1.19.1
+opt-einsum==3.3.0
+parso==0.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.7
+ptyprocess==0.6.0
+Pygments==2.6.1
+pyowm==3.0.0
+PySocks==1.7.1
 python-dateutil==2.8.1
 pytz==2020.1
 requests==2.24.0
 ruptures==1.0.5
-scipy==1.4.1
+scipy==1.5.2
+shared-memory-dict==0.1.1
 six==1.15.0
 stravalib==0.10.2
+traitlets==5.0.3
 units==0.7
 urllib3==1.25.10
+uWSGI==2.0.19.1
+uwsgidecorators==1.1.0
+wcwidth==0.2.5
 Werkzeug==1.0.1
-jax==0.1.75
-jaxlib==0.1.52
