--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,45 +1,35 @@
-absl-py
-aniso8601
-arrow
-backcall
-certifi
-chardet
-click
-decorator
-Flask
-Flask-Cors
-Flask-RESTful
-geojson
-googlemaps
-idna
-ipython
-ipython-genutils
-itsdangerous
-jax
-jaxlib
-jedi
-Jinja2
-MarkupSafe
-numpy
-opt-einsum
-parso
-pexpect
-pickleshare
-prompt-toolkit
-ptyprocess
-Pygments
-pyowm
-PySocks
-python-dateutil
-pytz
-requests
-ruptures
-scipy
-shared-memory-dict
-six
-stravalib
-traitlets
-units
-urllib3
-wcwidth
-Werkzeug
+absl-py==1.0.0
+aniso8601==9.0.1
+arrow==1.2.2
+certifi==2021.10.8
+charset-normalizer==2.0.12
+click==8.1.2
+Flask==2.1.1
+Flask-Cors==3.0.10
+Flask-RESTful==0.3.9
+flatbuffers==2.0
+geojson==2.5.0
+googlemaps==4.6.0
+gpxpy==1.5.0
+idna==3.3
+itsdangerous==2.1.2
+jax==0.3.7
+jaxlib==0.3.7
+Jinja2==3.1.1
+MarkupSafe==2.1.1
+numpy==1.22.3
+opt-einsum==3.3.0
+pwlf==2.1.0
+pyDOE==0.3.8
+pyowm==3.3.0
+PySocks==1.7.1
+python-dateutil==2.8.2
+pytz==2022.1
+requests==2.27.1
+scipy==1.8.0
+six==1.16.0
+stravalib==0.10.4
+typing_extensions==4.2.0
+units==0.7
+urllib3==1.26.9
+Werkzeug==2.1.1
